# playdo

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DETAILED_TECHNICAL_NOTES.md  DOCKER.md  Dockerfile  README.md  TECHNICAL_NOTES.md  claude-help.md  install.sh  pyproject.toml  run.sh  sanity_test.py  schema.sql  user_cli.sh
.cursor/rules/: always-run-tests-after-code-changes.mdc  always-use-type-hints-in-python.mdc  guide-for-writing-cursor-rules.mdc  how-to-design-pytest-tests.mdc  python-testing.mdc  run-linters-and-formatter-after-changing-python-code.mdc  update_technical_docs.mdc  use-native-uv-tools.mdc
backend/: README.md  install.sh  pyproject.toml  schema.sql
backend/playdo/: app.py  conversation_history_repository.py  conversation_repository.py  models.py  playdo_app.py  response_getter.py  settings.py
backend/playdo/cli/: cli_app.py  historical_conversation.py
backend/playdo/endpoints/: conversations.py
backend/tests/: conftest.py  test_api.py  test_conversation_history_repository.py  test_historical_conversation.py
curls/: create_conversation.sh  get_conversation.sh  get_conversation_ids.sh  login.sh  send_message.sh  send_message_with_code.sh
frontend/: package-lock.json  package.json
playdo/: app.py  conversation_history_repository.py  conversation_repository.py  db.py  historical_conversation.py  models.py  playdo_app.py  response_getter.py  settings.py  user_repository.py  validators.py
playdo-frontend/: .gitignore  package-lock.json  package.json
playdo-frontend/src/: types.ts
playdo-frontend/src/components/: App.test.tsx  App.tsx  Message.tsx  (+7 more)
playdo/cli/: cli_app.py  historical_conversation.py  user_cli.py
playdo/endpoints/: auth.py  conversations.py
playdo/svc/: auth_service.py  user_service.py
requirements/: Code-Chat Integration: Backend Technical Design.md  tech-spec-writer-prompt.md
requirements/apiflask-migration/: technical-implementation-guide.md
requirements/code-chat-integration/: Code-Chat Integration: Backend Technical Design.md
requirements/user_mgmt/: user_management_tech_plan.md
rule_drafts/: comprehensive-planning-before-coding.mdc  how-to-design-pytest-tests.mdc  no-unnecessary-rewrites.mdc  readme.txt
tests/: conftest.py  test_api.py  test_conversation_history_repository.py  test_historical_conversation.py  test_models.py  test_user_cli.py  test_user_repository.py  test_validators.py
tests/integration/: test_api.py  test_user_cli.py
tests/svc/: test_authentication_service.py  test_user_service.py
(+1 files in other folders)
